--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html "markdown=1">
+<html>
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/custom.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Apps for the manystories project</title>
+    <title>Many Stories, Many Apps</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Apps</h1>
-        <h2>Apps for the ManyStories api</h2>
+        <h1>Many Stories, Many Apps</h1>
+        <h2>A guide to create Apps using the ManyStories project APIs</h2>
         <a href="https://github.com/manystories/apps" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
@@ -80,9 +81,6 @@
 <li>The <a href="http://manystoriesoneheart.gr/sites/all/themes/manystories/logo.png">logo</a> of the website linked to the <a href="http://manystoriesoneheart.gr">main website</a>
 </li>
 </ul>
-
-<h4>
-<a id="apps" class="anchor" href="#apps" aria-hidden="true"><span class="octicon octicon-link"></span></a>Apps</h4>
         </section>
 
         <aside id="sidebar">
@@ -94,7 +92,7 @@
           <h3>App list</h3>
           <hr>
 
-          <ul>
+          <ul class="app-list">
             <li>
                 <a href="http://manystories.github.io/apps/apps/leaflet-points" class="project">Many Stories, Many Points!</a>
             </li>
