--- a/apps/leaflet-points/index.html
+++ b/apps/leaflet-points/index.html
@@ -2,6 +2,12 @@
 <head>
 <title>Many Stories, Many Points!</title>
 
+<meta http-equiv="cache-control" content="max-age=0" />
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="expires" content="0" />
+<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+<meta http-equiv="pragma" content="no-cache" />
+
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2.rc.2/leaflet.css">
 <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=greek-ext,latin'>
 <link rel='stylesheet' type='text/css' href='style.css'>
