Add leaflet.marketcluster for multiple points

--- a/apps/leaflet-points/index.html
+++ b/apps/leaflet-points/index.html
@@ -9,10 +9,13 @@
 <meta http-equiv="pragma" content="no-cache" />
 
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2.rc.2/leaflet.css">
+<link rel="stylesheet" type="text/css" href="leaflet.markercluster/MarkerCluster.Default.css">
+<link rel="stylesheet" type="text/css" href="leaflet.markercluster/MarkerCluster.css">
 <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=greek-ext,latin'>
 <link rel='stylesheet' type='text/css' href='style.css'>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2.rc.2/leaflet.js"></script>
+<script type="text/javascript" src="leaflet.markercluster/leaflet.markercluster-src.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
 
