--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
           <ul class="app-list">
             <li>
-                <a href="http://manystories.github.io/apps/apps/leaflet-points" class="project">Many Stories, Many Points!</a>
+                <a href="http://apps.manystoriesoneheart.grapps/leaflet-points" class="project">  Many Stories, Many Points!</a>
             </li>
           </ul>
           <!--
